--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>С Новым годом!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Итоги 2017</title>
+<meta property="og:image" content="https://static.tildacdn.com/tild3732-3638-4937-a134-663666383137/esprezo_2017.jpg" />
+</head>
