--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html>
 <head>
 	<title>Итоги 2017</title>
-<meta property="og:image" content="https://static.tildacdn.com/tild3732-3638-4937-a134-663666383137/esprezo_2017.jpg" />
+<meta property="og:image" content="head.png" />
 </head>
