--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html>
 <head>
 	<title>Итоги 2017</title>
-<meta property="og:image" content="head.png" />
+<img src = "head.png" alt = "Команда профсоюза РНИМУ">
 </head>
