--- a/index.html
+++ b/index.html
@@ -1,6 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Итоги 2017</title>
-<img src = "head.png" alt = "Команда профсоюза РНИМУ">
+<title>Итоги 2017</title>
+<link type="text/css" rel="stylesheet" href="css/lightslider.css" />                  
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/lightslider.js"></script>
+// Do not include both lightslider.js and lightslider.min.js
+<style>
+html,body{margin:0;padding:0}
+body{font: 76% arial,sans-serif;text-align:center}
+p{margin:0 10px 10px}
+a{display:block;color: #981793;padding:10px}
+div#header h1{height:80px;line-height:80px;margin:0;
+  padding-left:10px;background: #EEE;color: #79B30B}
+div#container{text-align:left}
+div#content p{line-height:1.4}
+div#navigation{background:#B9CAFF}
+div#extra{background:#FF8539}
+div#footer{background: #333;color: #FFF}
+div#footer p{margin:0;padding:5px 10px}
+div#container{width:700px;margin:0 auto}
+div#wrapper{float:left;width:100%}
+div#content{margin: 0 150px}
+div#navigation{float:left;width:150px;margin-left:-700px}
+div#extra{float:left;width:150px;margin-left:-150px}
+div#footer{clear:left;width:100%}
+rgin-left:-550px}
+div#footer{clear:left;width:100%}
+</style>
 </head>
+<body>
+<div id="container">
+<div id="header"><img src = "head.png" alt = "Команда профсоюза РНИМУ"></div>
+<div id="wrapper">
+<div id="content">
+<p><strong>1) Контент.</strong>
+Как часто вы задумываетесь над смыслом жизни?
+А находите ли вы ответ на вопрос «в чем смысл жизни»?
+Что уже успели сделать за дарованные вам годы жизни?
+Вот еще один год подходит к концу… Довольны ли вы тем, как вы его прожили?
+Я очень часто огорчаюсь от того, что за свои годы ничего существенного не достигла.
+ Нет в моей жизни такого поступка, которым действительно можно было бы гордиться.
+ И когда я познакомилась с историей этой маленькой девочки,
+ я до глубины души была впечатлена!
+ Рейчел Беквит – американская девочка из Сиетла, которая родилась в 2002 году.
+ Однажды в церкви, которую посещала ее семья, она узнала, что в
+ Африке каждый день погибает 4,5 тысяч деток от страшных болезней,
+ потому что им приходиться утолять свою жажду водой из грязных луж и зараженных болот.
+Эта статистика толкнула Рейчел на удивительный поступок.
+Перед празднованием своего 9-летия она попросила своих родных и близких,
+чтобы они не тратили деньги ей на игрушки, сладости или другие какие-либо подарки.
+Вместо этого она призвала их всех пожертвовать эти деньги благотворительной
+организации Charity Water, которая помогала людям в тех странах,
+где не хватало питьевой воды.
+</p>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("#lightSlider").lightSlider(); 
+  });
+</script>
+</div>
+</div>
+<div id="navigation">
+<p><strong>2) Новости.</strong>
+Как управлять человечеством?
+Конечно же, установить законы. А какими бывают законы?
+Строгими, справедливыми, вечными, а еще … нелепыми!
+Прочитайте эту интересную статью и узнайте, в каких странах
+действуют эти нелепые законы. Я также постаралась найти
+причину возникновения каждого нелепого закона.
+</p>
+</div>
+<div id="extra">
+<p><strong>3) Меню.</strong> Продолжаем узнавать интересные и невероятные факты.
+Тем, кто считает, что человеку свойственны пять чувств, спешу сказать, что их уже девять!
+Если вы интересуетесь интересными фактами о человеческом организме, то эта статья как раз для вас!
+Узнайте больше о себе и о своих органах чувств.</p>
+</div>
+<div id="footer"><p>BlogGood.ru</p></div>
+</div>
+</body>
+</html>
